; ModuleID = '/home/carl/AnghaBench/lede/package/network/services/ead/src/extr_ead-crypt.c_ead_check_rx_iv.c'
source_filename = "/home/carl/AnghaBench/lede/package/network/services/ead/src/extr_ead-crypt.c_ead_check_rx_iv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ead_rx_iv = common dso_local global i64 0, align 8
@EAD_MAX_IV_INCR = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64)* @ead_check_rx_iv to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ead_check_rx_iv(i64 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i64, i64* %3, align 8
  %5 = load i64, i64* @ead_rx_iv, align 8
  %6 = icmp sle i64 %4, %5
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %17

8:                                                ; preds = %1
  %9 = load i64, i64* %3, align 8
  %10 = load i64, i64* @ead_rx_iv, align 8
  %11 = load i64, i64* @EAD_MAX_IV_INCR, align 8
  %12 = add nsw i64 %10, %11
  %13 = icmp sgt i64 %9, %12
  br i1 %13, label %14, label %15

14:                                               ; preds = %8
  store i32 0, i32* %2, align 4
  br label %17

15:                                               ; preds = %8
  %16 = load i64, i64* %3, align 8
  store i64 %16, i64* @ead_rx_iv, align 8
  store i32 1, i32* %2, align 4
  br label %17

17:                                               ; preds = %15, %14, %7
  %18 = load i32, i32* %2, align 4
  ret i32 %18
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
